@@ -164,6 +164,18 @@ else
 	backend="polling"
 fi
 
+AC_ARG_ENABLE(inotify,
+[  --enable-inotify Uses inotify as backend],
+[case "${enableval}" in
+  yes) backend="inotify" ;;
+  no) ;;
+  *) AC_MSG_ERROR(bad value ${enableval} for --enable-inotify) ;;
+esac])
+
+if test x$backend = xinotify; then
+    AC_DEFINE(USE_INOTIFY,1,[Use inotify as backend])
+fi
+
 dnl check for flavours of varargs macros (test from GLib)
 AC_MSG_CHECKING(for ISO C99 varargs macros in C)
 AC_TRY_COMPILE([],[
